erl_opts is needed for gtp_u_edp and eradius

--- a/rebar.config
+++ b/rebar.config
@@ -23,6 +23,12 @@
 				   {override, gen_netlink, [{erl_opts,[native, {hipe, o3},
 								       {parse_transform, lager_transform},
 								       {lager_extra_sinks, [netlink]}]}]},
+				   {override, gtp_u_edp, [{erl_opts,[debug_info,
+								     native, {hipe, o3},
+								     {parse_transform, lager_transform}]}]},
+				   {override, eradius, [{erl_opts,[debug_info,
+								   native, {hipe, o3},
+								   {parse_transform, lager_transform}]}]},
 				   {override, regine, [{erl_opts,[native, {hipe, o3},
 								  {parse_transform, lager_transform}]}]},
 				   {override, gtplib, [{erl_opts,[native, {hipe, o3},
