update default erl_opts in rebar

--- a/rebar.config
+++ b/rebar.config
@@ -33,6 +33,9 @@
 								  {parse_transform, lager_transform}]}]},
 				   {override, gtplib, [{erl_opts,[native, {hipe, o3},
 								  {parse_transform, lager_transform}]}]},
-				   {override, [{erl_opts, [native, {hipe, o3}]}]}]}]
+				   {override, [{erl_opts, [{platform_define, "^[0-9]+", namespaced_types},
+							   {platform_define, "^[0-9]+", namespaced_dicts},
+							   {platform_define, "^((1[8|9])|2)", rand_module},
+							   native, {hipe, o3}]}]}]}]
 	    }]
 }.
