--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,9 @@
 {erl_opts, [debug_info]}.
 {deps, [
-	{gtp_u_edp, ".*", {git, "git://github.com/travelping/gtp_u_edp", "master"}}
+	{gtp_u_edp, ".*", {git, "git://github.com/travelping/gtp_u_edp", {ref, "023ff50"}}}
 ]}.
 
-{relx, [{release, { 'ergw-gtp-u-edp', "1.1.0" },
+{relx, [{release, { 'ergw-gtp-u-edp', "1.2.0" },
          [gtp_u_edp, sasl]},
 
         {sys_config, "./config/sys.config"},
