--- a/config/sys.config
+++ b/config/sys.config
@@ -1,26 +1,1 @@
-[
- {'ergw-gtp-u-edp', []},
-
- {gtp_u_edp, [
-	       {sockets, [{grx, [{ip, {127,0,0,1}},
-				 {netdev, "lo"},
-				 freebind
-				 %% {netns, "/var/run/netns/grx"}
-				]},
-			  {'proxy-grx', [{ip,  {127,0,0,2}},
-					 {netdev, "lo"},
-					 freebind
-					 %% {netns, "/var/run/netns/proxy"}
-					]}
-			 ]}
-	      ]},
-
- {lager, [
-	 {colored, true},
-	 {handlers, [
-		     {lager_console_backend, debug},
-		     {lager_file_backend, [{file, "/var/log/gtp-u-edp/error.log"}, {level, error}]},
-		     {lager_file_backend, [{file, "/var/log/gtp-u-edp/console.log"}, {level, info}]}
-		    ]}
-	]}
-].
+["/etc/ergw-gtp-u-edp/ergw-gtp-u-edp.config"].
