--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
 	{gtp_u_edp, {git, "git://github.com/travelping/gtp_u_edp", {ref, "747127f"}}},
+	{gen_socket, {git, "git://github.com/travelping/gen_socket", {branch, "master"}}}
 ]}.
 
 {relx, [{release, { 'ergw-gtp-u-edp', "1.5.0" },
