Add observability means to the runtime
This commit adds the following runtime dependencies:

* observer
* recon

Both are "cold" libraries who wait until they will be used by someone to
diagnose the system.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,7 @@ RUN     apk update && apk --no-cache upgrade && \
 		erlang-kernel erlang-parsetools erlang-public-key \
 		erlang-os-mon \
 		erlang-runtime-tools erlang-sasl erlang-ssl erlang-stdlib \
+		erlang-observer \
 		erlang-syntax-tools \
 	    gcc \
 	    git \
