--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,15 @@
 {erl_opts, [debug_info]}.
 {deps, [
 	{gtp_u_edp, {git, "git://github.com/travelping/gtp_u_edp", {ref, "47a45ad6f4f7935a18012bc3c4cc8796a4bb424a"}}},
-	{gen_socket, {git, "git://github.com/travelping/gen_socket", {branch, "master"}}}
+	{gen_socket, {git, "git://github.com/travelping/gen_socket", {branch, "master"}}},
+	{recon, "2.3.5"}
 ]}.
 
 {relx, [{release, { 'ergw-gtp-u-edp', "1.5.0" },
          [gtp_u_edp,
+          recon,
+          observer,
+          runtime_tools,
           sasl]},
 
         {sys_config, "./config/sys.config"},
