Reduce container size
The addition of `observer` usually adds libraries and dependencies for
the GUI part of `observer`. Since we don't want to use that GUI part
on the remote node anyway, we can exclude it from being built into
to release: `wx` is now excluded from being shipped.

--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
           observer,
           runtime_tools,
           sasl]},
-
+        {exclude_apps, [wx]},
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
 
